Update to new version

--- a/app/styles/preloader.css
+++ b/app/styles/preloader.css
@@ -3,7 +3,7 @@
  * در حالت پیش فرض یک تصویر لود نمایش داده می‌شود. شما می‌توانید
  * بر اساس مدل مورد نظر خود این کلاس را تغییر دهید.
  */
-.amd-preload {
+.wb-preload {
 	background: #999999 url("../images/loader.gif") no-repeat center;
 	min-height: 1px;
 	min-width: 1px;
@@ -14,6 +14,6 @@
  * تغییر حالت از کلاس در حالت لود به حالت عادی به صورت انیمیشن انجام 
  * می‌شود. این کلاس کلاسی است که برای انتقال استفاده می‌شود.
  */
-.amd-preload-animate {
+.wb-preload-animate {
 }
 
