--- a/app/views/amd-user-user.html
+++ b/app/views/amd-user-user.html
@@ -1,72 +1,58 @@
+
 <md-content 
-	class="md-padding"
-	layout-padding
+	ng-controller="AmdUserAccountCtrl as ctrl"
 	flex>
-	
-	<!-- صفحه حساب کاربری -->
-	<section 
-		mb-preloading="ctrl.userLoading"
-		layout="column" 
-		md-whiteframe="1"
-		layout-margin>
+<!--		mb-preloading="ctrl.userLoading"-->
+	<mb-titled-block 
+		layout-margin
+		mb-title="{{'Account'| translate}}"
+		layout="column">
 		<div
 			layout="column" 
 			layout-gt-sm="row">
-			<img 
-				width="250px"
-				height="250px"
-				ng-src="/api/v2/user/accounts/{{user.id}}/avatar" 
-				ng-src-error="https://www.gravatar.com/avatar/{{app.user.current.id|wbmd5}}?d=identicon&size=250"/>
+			<mb-inline
+				ng-model="profile.first_name"
+				ng-change="ctrl.updateProfile()"
+				mb-inline-enable="__account.permissions.core_owner"
+				mb-inline-type="text">
+				<img 
+					width="250px"
+					height="250px"
+					ng-src="/api/v2/user/accounts/{{::account.id}}/avatar" 
+					ng-src-error="https://www.gravatar.com/avatar/{{::(account.id|wbmd5)}}?d=identicon&size=250"/>
+			</mb-inline>
 			<div flex> 
 				<table 
 					class="amd-table amd-table-description">
 					<tr>
 						<td translate>ID</td>
-						<td>{{user.id}}</td>
+						<td>{{::account.id}}</td>
 					</tr>
 					<tr>
 						<td translate>Username</td>
-						<td>{{user.login}}</td>
+						<td>{{::account.login}}</td>
 					</tr>
 					<tr>
-						<td translate>First name</td>
-						<td>{{user.first_name}}</td>
+						<td translate>Joined</td>
+						<td>{{account.date_joined | mbDate}}</td>
 					</tr>
 					<tr>
-						<td translate>Last name</td>
-						<td>{{user.last_name}}</td>
-					</tr>
-					<tr>
-						<td translate>EMail</td>
-						<td>{{user.email}}
-							<a ng-if="user.email" ng-href="mailto:{{user.email}}">
-								<md-button class="md-icon-button md-warn"><wb-icon>mail</wb-icon></md-button>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td translate>Joined date</td>
-						<td>{{user.date_joined | mbDate:'jYYYY/jMM/jDD'}}</td>
-					</tr>
-					<tr>
-						<td translate>Last login</td>
-						<td>{{user.last_login | mbDate:'jYYYY/jMM/jDD'}}</td>
+						<td translate>Last Login</td>
+						<td>{{account.last_login | mbDate}}</td>
 					</tr>
 					<tr>
 						<td translate>Activation state</td>
 						<td>
-							<span ng-if="!app.user.tenant_owner">{{user.is_active ? 'Active' : 'Deactive' | translate}}</span>
+							<span ng-if="!app.user.tenant_owner">{{account.is_active ? 'Active' : 'Deactive' | translate}}</span>
 							<md-switch ng-if="app.user.tenant_owner"
-								ng-model="user.is_active" 
-								ng-change="update()">
-							    {{user.is_active ? 'Active' : 'Deactive' | translate}}
+								ng-model="account.is_active" 
+								ng-change="update()">{{account.is_active ? 'Active' : 'Deactive' | translate}}
 							</md-switch>
 						</td>
 					</tr>
 				</table>
 			</div>
 		</div>
-		
 		<div
 			layout="column" 
 			layout-gt-sm="row">
@@ -78,16 +64,93 @@
 				<span translate>Delete</span>
 			</md-button>
 		</div>
-	</section>
+	</mb-titled-block>
+	
+	<mb-titled-block 
+		mb-title="{{'Public Profile'| translate}}"
+		mb-progress="ctrl.profileUpdating"
+		style="margin: 16px;"
+		layout="column">
+		<table 
+			class="amd-table amd-table-description">
+			<tr>
+				<td translate>ID</td>
+				<td> : {{profile.id}}</td>
+			</tr>
+			<tr>
+				<td translate>First Name</td>
+				<td><mb-inline
+						ng-model="profile.first_name"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="text"> : {{profile.first_name}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>EMail</td>
+				<td><mb-inline
+						ng-model="profile.public_email"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="email"> : {{profile.public_email}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>Language</td>
+				<td><mb-inline
+						ng-model="profile.language"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="text"> : {{profile.language}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>Timezone</td>
+				<td><mb-inline
+						ng-model="profile.timezone"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="text"> : {{profile.timezone}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>National Code</td>
+				<td><mb-inline
+						ng-model="profile.national_code"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="text"> : {{profile.national_code}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>Gender</td>
+				<td><mb-inline
+						ng-model="profile.gender"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="gender"> : {{profile.gender}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>Weight</td>
+				<td><mb-inline
+						ng-model="profile.weight"
+						ng-change="ctrl.updateProfile()"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="float"> : {{profile.weight}}</mb-inline></td>
+			</tr>
+			<tr>
+				<td translate>Birthday</td>
+				<td><mb-inline
+						ng-model="profile.birthday"
+						mb-inline-enable="__account.permissions.core_owner"
+						mb-inline-type="date"
+						mb-inline-on-save="ctrl.updateProfile()"> : {{profile.birthday | mbDate}}</mb-inline></td>
+			</tr>
+		</table>
+	</mb-titled-block>
 
-	<section 
-		mb-preloading="ctrl.roleLoading"
-		layout="column" 
-		md-whiteframe="1"
-		layout-margin>
-		<h3 translate>Roles</h3>
+	<!--order info-->
+	<mb-titled-block 
+		layout-margin
+		mb-title="{{::('Roles'| translate)}}"
+		layout="column">
 		<md-chips 
-			ng-model="roles.items"
+			ng-model="roles"
 			md-on-remove="removeRole($chip)">
 			<md-chip-template>
 				<strong>{{$chip.name}}</strong>
@@ -106,16 +169,14 @@
 				<span translate>Edit</span>
 			</md-button>
 		</div>
-	</section>
+	</mb-titled-block>
 	
-	<section 
-		mb-preloading="ctrl.groupLoading"
-		layout="column" 
-		md-whiteframe="1"
-		layout-margin>
-		<h3 translate>Groups</h3>
+	<mb-titled-block 
+		layout-margin
+		mb-title="{{::('Groups'| translate)}}"
+		layout="column">
 		<md-chips 
-			ng-model="groups.items"
+			ng-model="groups"
 			md-on-remove="removeGroup($chip)">
 			<md-chip-template>
 				<strong>{{$chip.name}}</strong>
