--- a/app/views/amd-shop-zones.html
+++ b/app/views/amd-shop-zones.html
@@ -1,4 +1,4 @@
-<div
+<md-content
 	ng-controller="MbSeenShopZonesCtrl as ctrl"
 	mb-preloading="ctrl.loading"
 	layout="column"
@@ -18,20 +18,16 @@
 			<md-list-item 
 				ng-repeat="pobject in ctrl.items track by pobject.id"
 				class="md-3-line" 
-				ng-href="{{'shop/zones/' + pobject.id}}"
+				ng-href="shop/zones/{{::pobject.id}}"
 				style="cursor: pointer">
-				<img ng-src="{{pobject.avatar}}" ng-if="pobject.avatar" class="md-avatar" />
-				<wb-icon ng-if="!pobject.avatar">cloud_upload</wb-icon>
+				<wb-icon>shop-zone</wb-icon>
 				<div class="md-list-item-text" layout="column">
-					<h3>{{pobject.title}}</h3>
-					<h4>
-						<span translate="">Price</span>: {{pobject.price}} 
-						<span ng-show="pobject.off">- <span tanslate="">Off</span>: <s>{{pobject.off}}</s></span>
-					</h4>
-					<p>{{pobject.description}}</p>
+					<h3>{{::pobject.title}}</h3>
+					<h4>{{::pobject.description}}</h4>
+					<p>{{::pobject.province}} {{::pobject.city}} {{::pobject.address}}</p>
 				</div>
 				<md-divider md-inset></md-divider> 
 			</md-list-item> 
 		</md-list>
 	</md-content>
-</div>
+</md-content>
