Dynamic loading dashboard content

--- a/app/views/amd-dashboard.html
+++ b/app/views/amd-dashboard.html
@@ -1,4 +1,5 @@
 <iframe 
+	ng-controller="AmdDashboardCtrl as ctrl"
+	ng-src="{{url}}"
 	style="border: none; padding: 0px; margin: 0px;"
-	src="https://www.viraweb123.ir/my-home/content/angular-material-dashboard-default-en"
 	flex></iframe>
