update order list

--- a/app/views/amd-shop-order.html
+++ b/app/views/amd-shop-order.html
@@ -82,11 +82,11 @@
 						</tr>
 						<tr>
 							<td translate="">Modification Date  </td>
-							<td>: <span translate="">{{ctrl.order.modif_dtime | mbDate}}</span></td>
+							<td>: <span translate="">{{ctrl.order.modif_dtime | mbDateTime}}</span></td>
 						</tr>
 						<tr>
 							<td translate="">Creation Date  </td>
-							<td>: <span translate="">{{ctrl.order.creation_dtime | mbDate}}</span></td>
+							<td>: <span translate="">{{ctrl.order.creation_dtime | mbDateTime}}</span></td>
 						</tr>
 					</table>
 					<!--Possible actions-->
