--- a/app/styles/shop-orders-board.css
+++ b/app/styles/shop-orders-board.css
@@ -45,9 +45,6 @@
 	margin: 12px 5px;
 }
 
-/*
- * Body of list
- */
 #shop-orders-board > #body > .column > #title {
 	padding: 6px 16px;
 	font-size: 16px;
@@ -70,59 +67,12 @@
 	cursor: pointer;
 }
 
-
-[dir=rtl] .activity-card-member-list {
-  direction: ltr;
+#shop-orders-board>#body #column-new {
+	align-self: flex-start;
+	
+	display: flex;
+	flex-direction: row;
+	align-content: center;
+	justify-content: center;
 }
 
-[dir=ltr] .activity-card-member-list {
-  direction: rtl;
-}
-
-.activity-card-label-list {
-  margin: 2px 0;
-  overflow: auto;
-  position: relative;
-}
-
-.activity-card-label {
-  display: block;
-  overflow: hidden;
-  position: relative;
-  padding: 0 8px;
-  margin: 0 3px 3px 0;
-  height: 16px;
-  line-height: 16px;
-  width: auto;
-  max-width: 198px;
-  min-width: 42px;
-  font-size: 12px;
-  font-weight: 600;
-  text-shadow: none;
-  text-overflow: ellipsis;
-  color: #fff;
-  background-color: green;
-  border-radius: 3px;
-}
-
-[dir=rtl] .activity-card-label {
-  float: right;
-}
-
-[dir=ltr] .activity-card-label {
-  float: left;
-}
-
-.activity-card-title {
-  font-size: 1.0em;
-}
-
-.activity-card-actions > .md-button {
-  margin: 0px;
-  padding: 0px;
-}
-
-.board-pattern-background {
-  background-color: #90caf9;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2364b5f6' fill-opacity='0.83'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
