--- a/app/views/amd-shop-order2.html
+++ b/app/views/amd-shop-order2.html
@@ -359,7 +359,7 @@
 								<h4>{{::history.description}}</h4>
 								<p>
 									<span ng-if="::history.creation_dtime">
-										<span translate>Date</span>:<span>{{::(history.creation_dtime | mbDate)}}</span>,
+										<span translate>Date</span>:<span>{{::(history.creation_dtime | mbDateTime)}}</span>,
 									</span>
 									<span 
 										ng-switch="::history.subject_type">
