Graphql query of contents are updated and status is replaced with state

--- a/app/views/amd-contents.html
+++ b/app/views/amd-contents.html
@@ -1,5 +1,5 @@
 <div  
-    ng-init="ctrl.setDataQuery('{id, title, name, file_name, description, mime_type, media_type, status, author{id,profiles{first_name,last_name}}}')"
+    ng-init="ctrl.setDataQuery('{id, title, name, file_name, description, mime_type, media_type, state, author{id,profiles{first_name,last_name}}}')"
     mb-preloading="ctrl.loading"
     layout="column"
     flex>
