--- a/app/views/amd-shop-order.html
+++ b/app/views/amd-shop-order.html
@@ -82,11 +82,11 @@
 						</tr>
 						<tr>
 							<td translate="">Modification Date  </td>
-							<td>: <span translate="">{{ctrl.order.modif_dtime | mbDateTime}}</span></td>
+							<td>: {{ctrl.order.modif_dtime | mbDateTime}}</td>
 						</tr>
 						<tr>
 							<td translate="">Creation Date  </td>
-							<td>: <span translate="">{{ctrl.order.creation_dtime | mbDateTime}}</span></td>
+							<td>: {{ctrl.order.creation_dtime | mbDateTime}}</td>
 						</tr>
 					</table>
 					<!--Possible actions-->
@@ -103,7 +103,7 @@
 							class="md-primary md-raised"
 							ng-repeat="action in ctrl.actions"
 							ng-click="ctrl.doAction(action)">
-							{{action.title}}
+							{{action.title | translate}}
 						</md-button>
 					</div>
 				</div>
