--- a/app/views/amd-content-new.html
+++ b/app/views/amd-content-new.html
@@ -1,8 +1,4 @@
-<md-content 
-	ng-controller="AmdContentNewCtrl as ctrl"
-	class="md-padding"
-	layout-padding
-	flex>
+<md-content style="overflow: auto;">
 	<form 
 		name="contentForm"
 		ng-action="ctrl.add(config)"
