--- a/app/views/amd-contents.html
+++ b/app/views/amd-contents.html
@@ -18,7 +18,7 @@
         <md-list flex>
             <md-list-item 
                 ng-repeat="content in ctrl.items track by content.id"
-                ng-href="content/{{::content.id}}"
+                ng-href="cms/contents/{{::content.id}}"
                 class="md-3-line">
                 <amd-content-icon 
                     ng-model="content">
