--- a/app/views/amd-term-taxonomies.html
+++ b/app/views/amd-term-taxonomies.html
@@ -21,7 +21,7 @@
         <md-list flex>
             <md-list-item 
                 ng-repeat="content in ctrl.items track by content.id"
-                ng-href="term-taxonomies/{{::content.id}}"
+                ng-href="cms/term-taxonomies/{{::content.id}}"
                 class="md-3-line">
                 <div 
                     class="md-list-item-text" 
