--- a/app/views/amd-terms.html
+++ b/app/views/amd-terms.html
@@ -21,7 +21,7 @@
         <md-list flex>
             <md-list-item 
                 ng-repeat="term in ctrl.items track by term.id"
-                ng-href="terms/{{::term.id}}">
+                ng-href="cms/terms/{{::term.id}}">
                 <p>{{::term.name}}</p>
                 <wb-icon 
                     class="md-secondary" 
