--- a/app/views/amd-content.html
+++ b/app/views/amd-content.html
@@ -1,5 +1,5 @@
 <md-content
-	flex>
+	style="overflow: auto;">
 	<mb-titled-block 
 		mb-title="Information"
 		mb-more-actions="ctrl.contentActions"
