Bank is updated based on new version

--- a/app/views/amd-bank-wallet.html
+++ b/app/views/amd-bank-wallet.html
@@ -126,8 +126,8 @@
             <!--Transfers-->
             <md-tab label="{{'Transfers'| translate}}">
                 <md-content class="md-padding">
+<!--                        ng-controller="AmdBankWalletTransfersCtrl as transferCtrl"-->
                     <div
-                        ng-controller="AmdBankWalletTransfersCtrl as transferCtrl"
                         mb-preloading="transferCtrl.state === 'ideal'"
                         layout="column"
                         flex>
@@ -190,8 +190,8 @@
             <!--Payments-->
             <md-tab label="{{'Payments'| translate}}">
                 <md-content class="md-padding">
+<!--                        ng-controller="AmdBankWalletPaymentsCtrl as paymentCtrl"-->
                     <div
-                        ng-controller="AmdBankWalletPaymentsCtrl as paymentCtrl"
                         mb-preloading="paymentCtrl.state === 'ideal'"
                         layout="column"
                         flex>
