fixed: https://github.com/viraweb123/vw-dashboard/issues/9

--- a/app/views/amd-shop-category.html
+++ b/app/views/amd-shop-category.html
@@ -1,7 +1,7 @@
 <md-content 
 	class="md-padding"
 	layout-padding
-	flex>
+	style="overflow: auto;">
 	<mb-titled-block 
 		ng-show="!ctrl.edit"
 		mb-progress="ctrl.loading || ctrl.saving"
