--- a/app/views/amd-shop-order.html
+++ b/app/views/amd-shop-order.html
@@ -1,6 +1,7 @@
 <md-content
 	style="overflow: scroll;"
-	layout-padding>
+	layout-padding
+	style="overflow: auto;">
 
 	<div 
 		ng-if="ctrl.loading || ctrl.actionLoading || ctrl.actionDoing"
