--- a/app/views/amd-user-user.html
+++ b/app/views/amd-user-user.html
@@ -1,11 +1,8 @@
-
 <md-content 
-	ng-controller="AmdUserAccountCtrl as ctrl"
-	flex>
-<!--		mb-preloading="ctrl.userLoading"-->
+	style="overflow: auto;">
 	<mb-titled-block 
 		layout-margin
-		mb-title="{{'Account' | translate}}"
+		mb-title="{{ ::('Account' | translate)}}"
 		layout="column">
 		<div
 			layout="column" 
@@ -13,41 +10,43 @@
 			<mb-inline
 				ng-model="_avatarNewFile"
 				ng-change="ctrl.updateAvatar(_avatarNewFile)"
-				mb-inline-enable="__account.permissions.core_owner"
+				mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
 				mb-inline-type="file">
 				<img 
 					width="250px"
 					height="250px"
-					ng-src="/api/v2/user/accounts/{{::account.id}}/avatar" 
-					ng-src-error="https://www.gravatar.com/avatar/{{::(account.id|wbmd5)}}?d=identicon&size=250"/>
+					ng-src="/api/v2/user/accounts/{{::ctrl.account.id}}/avatar" 
+					ng-src-error="https://www.gravatar.com/avatar/{{::(ctrl.account.id|wbmd5)}}?d=identicon&size=250"/>
 			</mb-inline>
-			<div flex> 
-				<table 
+			<div flex>
+				<table
 					class="amd-table amd-table-description">
 					<tr>
 						<td mb-translate>ID</td>
-						<td>{{::account.id}}</td>
+						<td>{{::ctrl.account.id}}</td>
 					</tr>
 					<tr>
 						<td mb-translate>Username</td>
-						<td>{{::account.login}}</td>
+						<td>{{::ctrl.account.login}}</td>
 					</tr>
 					<tr>
 						<td mb-translate>Joined</td>
-						<td>{{account.date_joined | mbDate}}</td>
+						<td>{{ctrl.account.date_joined | mbDate}}</td>
 					</tr>
 					<tr>
 						<td mb-translate>Last Login</td>
-						<td>{{account.last_login | mbDate}}</td>
+						<td>{{ctrl.account.last_login | mbDate}}</td>
 					</tr>
 					<tr>
 						<td mb-translate>Activation state</td>
 						<td>
-							<span ng-if="!app.user.tenant_owner">{{account.is_active ? 'Active' : 'Deactive'  | translate}}</span>
-							<md-switch ng-if="app.user.tenant_owner"
-								ng-model="account.is_active" 
-								ng-change="update()">{{account.is_active ? 'Active' : 'Deactive'  | translate}}
-							</md-switch>
+							<div ng-if="hasAnyRole('tenant.owner', 'user.manager')">
+								<span>{{ctrl.account.is_active ? 'Active' : 'Deactive'  | translate}}</span>
+								<md-switch 
+									ng-model="account.is_active" 
+									ng-change="update()">{{ctrl.account.is_active ? 'Active' : 'Deactive'  | translate}}
+								</md-switch>
+							</div>
 						</td>
 					</tr>
 				</table>
@@ -59,7 +58,7 @@
 			<span flex></span>
 			<md-button 
 				class="md-raised md-accent" 
-				ng-click="remove()">
+				ng-click="ctrl.deleteAccount()">
 				<mb-icon>delete</mb-icon>
 				<span mb-translate>Delete</span>
 			</md-button>
@@ -67,87 +66,87 @@
 	</mb-titled-block>
 	
 	<mb-titled-block 
-		mb-title="{{'Public Profile' | translate}}"
-		mb-progress="ctrl.profileUpdating"
+		mb-title="{{::('Public Profile' | translate)}}"
+		mb-progress="ctrl.loading || ctrl.profileUpdating"
 		style="margin: 16px;"
 		layout="column">
 		<table 
 			class="amd-table amd-table-description">
 			<tr>
 				<td mb-translate>ID</td>
-				<td> : {{profile.id}}</td>
+				<td> : {{ctrl.profile.id}}</td>
 			</tr>
 			<tr>
 				<td mb-translate>First Name</td>
 				<td><mb-inline
-						ng-model="profile.first_name"
+						ng-model="ctrl.profile.first_name"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="text"> : {{profile.first_name}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="text"> : {{ctrl.profile.first_name}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Last Name</td>
 				<td><mb-inline
-						ng-model="profile.last_name"
+						ng-model="ctrl.profile.last_name"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="text"> : {{profile.last_name}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="text"> : {{ctrl.profile.last_name}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>EMail</td>
 				<td><mb-inline
-						ng-model="profile.public_email"
+						ng-model="ctrl.profile.public_email"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="email"> : {{profile.public_email}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="email"> : {{ctrl.profile.public_email}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Language</td>
 				<td><mb-inline
-						ng-model="profile.language"
+						ng-model="ctrl.profile.language"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="text"> : {{profile.language}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="text"> : {{ctrl.profile.language}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Timezone</td>
 				<td><mb-inline
-						ng-model="profile.timezone"
+						ng-model="ctrl.profile.timezone"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="text"> : {{profile.timezone}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="text"> : {{ctrl.profile.timezone}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>National Code</td>
 				<td><mb-inline
-						ng-model="profile.national_code"
+						ng-model="ctrl.profile.national_code"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="text"> : {{profile.national_code}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="text"> : {{ctrl.profile.national_code}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Gender</td>
 				<td><mb-inline
-						ng-model="profile.gender"
+						ng-model="ctrl.profile.gender"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="gender"> : {{profile.gender}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="gender"> : {{ctrl.profile.gender}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Weight</td>
 				<td><mb-inline
-						ng-model="profile.weight"
+						ng-model="ctrl.profile.weight"
 						ng-change="ctrl.updateProfile()"
-						mb-inline-enable="__account.permissions.core_owner"
-						mb-inline-type="float"> : {{profile.weight}}</mb-inline></td>
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
+						mb-inline-type="float"> : {{ctrl.profile.weight}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate>Birthday</td>
 				<td><mb-inline
-						ng-model="profile.birthday"
-						mb-inline-enable="__account.permissions.core_owner"
+						ng-model="ctrl.profile.birthday"
+						mb-inline-enable="hasAnyRole('tenant.owner', 'user.manager') || principal.id === ctrl.account.id"
 						mb-inline-type="date"
-						mb-inline-on-save="ctrl.updateProfile()"> : {{profile.birthday | mbDate}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateProfile()"> : {{ctrl.profile.birthday | mbDate}}</mb-inline></td>
 			</tr>
 		</table>
 	</mb-titled-block>
@@ -158,21 +157,21 @@
 		mb-title="{{::('Roles' | translate)}}"
 		layout="column">
 		<md-chips 
-			ng-model="roles"
-			md-on-remove="removeRole($chip)">
+			ng-model="ctrl.roles"
+			md-on-remove="ctrl.deleteRole($chip)">
 			<md-chip-template>
-				<strong>{{$chip.name}}</strong>
+				<strong>{{::$chip.application}}.{{::$chip.code_name}}</strong>
 			</md-chip-template>
 		</md-chips>
 		<div 
-			ng-show="!roles.items || roles.items.length == 0"
+			ng-show="!ctrl.roles.items || ctrl.roles.items.length == 0"
 			layout="column" layout-align="center center">
 			<p mb-translate>User has no role.</p>
 		</div>
 		<div layout="row">
 			<span flex></span>
 			<md-button class="md-raised" 
-				ng-click="changeRoles()">
+				ng-click="ctrl.updateRoles()">
 				<mb-icon>edit</mb-icon>
 				<span mb-translate>Edit</span>
 			</md-button>
@@ -184,21 +183,21 @@
 		mb-title="{{::('Groups' | translate)}}"
 		layout="column">
 		<md-chips 
-			ng-model="groups"
-			md-on-remove="removeGroup($chip)">
+			ng-model="ctrl.groups"
+			md-on-remove="ctrl.deleteGroup($chip)">
 			<md-chip-template>
 				<strong>{{$chip.name}}</strong>
 			</md-chip-template>
 		</md-chips>
 		<div 
-			ng-show="!groups.items || groups.items.length == 0"
+			ng-show="!ctrl.groups.items || ctrl.groups.items.length == 0"
 			layout="column" layout-align="center center">
 			<p mb-translate>User is not member of any group.</p>
 		</div>
 		<div layout="row">
 			<span flex></span>
 			<md-button class="md-raised"
-				ng-click="changeGroups()">
+				ng-click="ctrl.updateGroups()">
 				<mb-icon>edit</mb-icon>
 				<span mb-translate>Edit</span>
 			</md-button>
